<resources>
    <string name="app_name">Many</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="proceed">Proceed</string>
    <string name="user">User</string>
    <string name="master_agent">Master Agent</string>
    <string name="agent">Agent</string>
    <string name="merchant">Merchant</string>
    <string name="user_log_in">User Log In</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="_8115993209">0123456789</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="_221">(+221)</string>
    <string name="validation_otp">Validation OTP</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="Increase_my_limit">Increase my limit</string>
    <string name="limit_text">Want to increase your account limit?\nComplete a quick verification by submitting \nyour valid ID document.</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="resend_in">Resend in</string>
    <string name="acceptedLimit">Accepted Documents:</string>
    <string name="Passport">Passport</string>
    <string name="or">or</string>
    <string name="National_id">National ID.</string>
    <string name="continue_type">Continue</string>
    <string name="invitefriend">Invite a Friend</string>
    <string name="invitefriends">Invites Friends</string>
    <string name="account_created">Account Created !</string>
    <string name="your_user_account_has_been_created_nsuccessfully">Your user account has been created \nsuccessfully.</string>
    <string name="created_successfully">Created Successfully</string>
    <string name="your_security_code_has_been_set_you_can_now_use_it_to_access_your_account_safely">Your security code has been set. You can now use it to access your account safely.</string>
    <string name="set_your_secret_code">Set Your Secret Code</string>
    <string name="secret_code">Secret Code</string>
    <string name="enter_your_secret_code">Enter Your Secret Code</string>
    <string name="secure_verification">Secure Verification</string>
    <string name="we_ll_send_you_a_code_to_verify_your_identity">We’ll send you a code to verify your identity.</string>
    <string name="send_code">Send Code</string>
    <string name="forgot_your_code">Forgot Your Code?</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="enable_notifications_so_you_don_t_miss_a_new_nconnection">Enable notifications so you don\'t miss a new \nconnection.</string>
    <string name="turn_on">Turn On</string>
    <string name="not_now">NOT NOW</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="transaction_history">Transaction History</string>
    <string name="edit_your_secret_code">Edit your secret code</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="contact_customer_service">Contact customer service</string>
    <string name="delete_account">Delete</string>
    <string name="logout">Logout</string>
    <string name="logout1">Logout !</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="information_about_your_limit">Information about your limit</string>
    <string name="find_id_money_agents">Find ID Money agents</string>
    <string name="are_you_sure_you_want_to_logout_your_account">Are you sure you want to logout your account?</string>
    <string name="delete_account1">Delete Account !</string>
    <string name="do_you_want_to_request_to_delete_your_account">Do you want to request to delete your account?</string>
    <string name="your_account_will_be_deleted_within">Your account will be deleted within</string>
    <string name="cancel">Cancel</string>
    <string name="_7_14_days">7-14 days.</string>
    <string name="no">No</string>
    <string name="account_limit">Account Limit</string>
    <string name="notification">Notification</string>
    <string name="sd">SD</string>
    <string name="lorem_ipsum_is_simply_dummy_text"><![CDATA[Lorem Ipsum is simply dummy text.]]></string>
    <string name="beryl_orou">XYZ</string>
    <string name="_01_33_23_43_44">01 33 23 43 44</string>
    <string name="account_switch">Account Switch</string>
    <string name="accountswitch">account?</string>
    <string name="ready_to_grow_your_business_reach_with_a">Ready to grow your business reach with a</string>
    <string name="want_to_boost_your_earning_potential_with_an">Want to boost your earning potential with an</string>
    <string name="want_to_lead_and_manage_at_scale_with_a">Want to lead and manage at scale with a</string>
    <string name="payments">Payments</string>
    <string name="new_transfers">New Transfers</string>
    <string name="benin_electric_power_company">Benin Electric Power Company</string>
    <string name="reference_de_accountur">Reference de Accountur</string>
    <string name="welcome_to_nmany_mobile_money">Welcome to Many.</string>
    <string name="send_and_receive_money_instantly_with_just_a_few_ntaps">Send and receive money instantly with just a few \ntaps.</string>
    <string name="your_balance">Your Balance</string>
    <string name="_24_900_fcfa">24 900 fcfa</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="see_all">See all</string>
    <string name="transfer_successful">Transfer successful!</string>
    <string name="share">Share</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="need_help">Need Help ?</string>
    <string name="merchant_id_verification">Merchant ID Verification</string>
    <string name="please_upload_the_following_documents_to_verify_nyour_merchant_account">Please upload the following documents to verify \nyour merchant account.</string>
    <string name="submit_documents">Submit Documents</string>
    <string name="business_id">Business ID</string>
    <string name="upload_your_business_registration_document">Upload your business registration document</string>
    <string name="tax_id">Contract</string>
    <string name="upload_your_tax_identification_document">Upload your tax identification document</string>
    <string name="upload_your_business_registration_certificate">Upload your business registration certificate</string>
    <string name="business_registration_number">Business Registration Number</string>
    <string name="my_qr_code">My QR Code Card</string>
    <string name="my_card">My Card</string>
    <string name="scanner">Scanner</string>
    <string name="business_logo">Business Logo</string>
    <string name="upload_business_logo">Upload your business logo</string>
    <string name="contact">Contact</string>
    <string name="new_number">New Number</string>
    <string name="security_alert">Security Alert</string>
    <string name="to_keep_your_account_safe_please_turn_off_developer_options_and_usb_debugging_in_your_device_settings">To keep your account safe, please turn OFF Developer Options and USB Debugging in your device settings.</string>
    <string name="close">Close</string>
    <string name="setting">Open Settings</string>
    <string name="_0">0</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="people">People</string>
    <string name="see_transaction_history">See transaction history</string>
    <string name="recent_people">Recent People</string>
    <string name="choose_from_your_contacts">Choose from your contacts</string>
    <string name="we_couldn_t_find_a_user_with_this_number_try_searching_with_another_number">We couldn’t find a user with this number. Try searching with another number.</string>
    <string name="mobile_fees">Fee = 1%</string>
    <string name="maximum_fees">Maximum monthly volume : </string>
    <string name="star">****</string>
    <string name="your_transaction_has_been_completed_successfully">Your transaction has been completed successfully.</string>
    <string name="upload_icon">Upload Icon</string>
    <string name="enter_a_new_phone_number">Enter a new phone number</string>
    <string name="no_notiifactiobn">No Notifications Available</string>
    <string name="less_balance">Oops! Insufficient Balance.\n</string>
    <string name="okay">Okay</string>
    <string name="total_payment">Total Payment</string>
    <string name="_0_fcfa">0 FCFA</string>
    <string name="received">Received</string>
    <string name="all_trans">All Transactions</string>
    <string name="user_registration">User Registration</string>
    <string name="reenter_secret">Re-enter secret code</string>
    <string name="verify_now">Verify Your Number</string>
    <string name="send_4_digit_code">We’ve sent a 4-digit code </string>
    <string name="transaction_complete">Your transaction has been completed successfully.</string>
    <string name="transaction_detail">Transaction Details</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="refernce">Reference</string>
    <string name="fees">Fees</string>
    <string name="recipt">Recipient</string>
    <string name="recipent_phone_number">Recipient Phone Number</string>
    <string name="invite_many">Invite friends to Many.</string>
    <string name="current_limit">Current limit</string>
    <string name="maximum_account_balance">Maximum account balance</string>
    <string name="maximum_monthly_volume">Maximum monthly volume</string>
    <string name="forgot_your_code_">Forgot Your Code?</string>
    <string name="enter_new_secret_code">Enter new secret code</string>
    <string name="re_enter_secret_code">Re-enter secret code</string>
    <string name="update">Update</string>
    <string name="upload_image_here">Upload image here</string>
    <string name="png_or_jpg_max_5mb">PNG or JPG (max. 5MB)</string>
    <string name="amount_deposit">Amount deposit</string>
    <string name="confirm_the_amount">Confirm the Amount</string>
    <string name="deposit">Deposit</string>
    <string name="e_receipt">E-Receipt</string>
    <string name="send_money">Send Money</string>
    <string name="amount_sent">Amount sent</string>
    <string name="confirm_amount">Confirm Amount</string>
    <string name="send">Send</string>
    <string name="to_contact">To Contact</string>
    <string name="search">Search</string>
    <string name="all_transactions">All Transactions</string>
    <string name="bery_orou_92_33_45_67_89">Bery Orou 92 33 45 67 89</string>
    <string name="confirm_your_id_upload">Confirm Your ID Upload</string>
    <string name="upload_both_sides_of_your_valid_id_documents_to_continue_with_the_verification">Upload both sides of your valid ID documents to continue with the verification.</string>
    <string name="ensure_your_valid_id_photos_are_clear_well_lit_and_show_all_four_corners_avoid_glare_blur_and_shadows">Ensure your valid ID photos are clear, well-lit, and show all four corners. Avoid glare, blur, and shadows.</string>
    <string name="upload_front_side">Upload Front Side</string>
    <string name="upload_back_side">Upload Back Side</string>
    <string name="submit_for_verification">Submit for Verification</string>
    <string name="fcfa">FCFA</string>
    <string name="scan_a_code">Scan a code</string>
    <string name="rebalancing">Rebalancing</string>
    <string name="to"> To </string>
    <string name="to1">To </string>
    <string name="from"> From </string>
</resources>