<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg"
    tools:context=".fragment.DeveloperFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables,UselessParent">
        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/agentlogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/satoshi_bold"
            android:layout_gravity="center"
            android:text="@string/security_alert"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#EEEEEE"
            android:textSize="@dimen/_13sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/satoshi_bold"
            android:layout_gravity="center"
            android:text="@string/to_keep_your_account_safe_please_turn_off_developer_options_and_usb_debugging_in_your_device_settings"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/btnOk"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/button_custom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/setting"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/satoshi_bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnNo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/button_custom_border">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/close"
                    android:textColor="#444444"
                    android:fontFamily="@font/satoshi_bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>