<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_setting"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0F0D1C"
            android:textSize="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/satoshi_bold"
            android:layout_gravity="center"
            android:text="@string/settings" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0F0D1C"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/satoshi_bold"
                android:layout_gravity="center|start"
                android:text="@string/general" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/transaction_history"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/transactionhistoryicon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/edit_your_secret_code"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/editcodeicon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/invite_a_friend"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/inviteicon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/information_about_your_limit"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/informationicon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0F0D1C"
                android:textSize="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:fontFamily="@font/satoshi_bold"
                android:layout_gravity="center|start"
                android:text="@string/support" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/contact_customer_service"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/supporticon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/find_id_money_agents"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/finelocationicon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0F0D1C"
                android:textSize="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:fontFamily="@font/satoshi_bold"
                android:layout_gravity="center|start"
                android:text="@string/account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/delete_account"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/deleteicon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#0F0D1C"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="start|center"
                    android:fontFamily="sans-serif-medium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/logout"
                    app:drawableEndCompat="@drawable/rightarrowicon"
                    app:drawableStartCompat="@drawable/logouticon" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>