<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#FFFFFF"
        android:background="#FFFFFF"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/tdesign_secured_filled"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/created_successfully"
                android:textColor="#0F0D1C"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/urbanist_semibold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/your_security_code_has_been_set_you_can_now_use_it_to_access_your_account_safely"
                android:textColor="#444444"
                android:textSize="@dimen/_15sdp" />


            <LinearLayout
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/button_custom">
                <TextView
                    android:id="@+id/tvbBn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_30sdp"
                    android:text="@string/continue_type"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/satoshi_bold"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>